--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,16 @@
                             <td>{{.Descricao}}</td>
                             <td>{{.Preco}}</td>
                             <td>{{.Quantidade}}</td>
+                            <!-- <td><a href="/delete">Deletar</a></td> -->
                         </tr>
                         {{end}}
                     </tbody>
                 </table>
             </div>
         </section>
-
+        <div class="card-footer">
+            <a href="/new" class="btn btn-primary mb-2">Criar novo produto</a>
+        </div>
     </div>
 </body>
 
