--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,4 +1,4 @@
-{{define "New"}}
+{{define "Edit"}}
 
 {{template "_head"}}
 
@@ -6,20 +6,22 @@
 
 <body>
     <div class="container">
+
         <body>
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                    <h1 class="display-5">Novo produto</h1>
-                    <p class="lead">Insira os detalhes</p>
+                    <h1 class="display-5">Editando produto</h1>
+                    <p class="lead">Insira os detalhes para atualizar ou editar.</p>
                 </div>
             </div>
             <!-- Metodo de POST -->
-            <form method="POST" action="insert">
+            <form method="POST" action="update">
+                <input type="hidden" name="id" value="{{.Id}}">
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label for="nome">Nome:</label>
-                            <input type="text" name="nome" class="form-control">
+                            <input type="text" name="nome" class="form-control" value="{{.Nome}}">
                         </div>
                     </div>
                 </div>
@@ -27,7 +29,7 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label for="descricao">Descrição:</label>
-                            <input type="text" name="descricao" class="form-control">
+                            <input type="text" name="descricao" class="form-control" value="{{.Descricao}}">
                         </div>
                     </div>
                 </div>
@@ -35,7 +37,7 @@
                     <div class="col-sm-2">
                         <div class="form-group">
                             <label for="preco">Preço:</label>
-                            <input type="number" name="preco" class="form-control" step="0.01">
+                            <input type="number" name="preco" class="form-control" step="0.01" value="{{.Preco}}">
                         </div>
                     </div>
                 </div>
@@ -44,11 +46,11 @@
                     <div class="col-sm-2">
                         <div class="form-group">
                             <label for="quantidade">Quantidade:</label>
-                            <input type="number" name="quantidade" class="form-control">
+                            <input type="number" name="quantidade" class="form-control" value="{{.Quantidade}}">
                         </div>
                     </div>
                 </div>
-                <button type="submit" value="salvar" class="btn btn-success">Salvar</button>
+                <button type="submit" value="salvar" class="btn btn-success">Atualizar</button>
                 <a class="btn btn-info" href="/">Voltar</a>
             </form>
         </body>
