--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -1,6 +1,6 @@
 {{define "_menu"}}
 
 <nav class="navbar navbar-light bg-light mb-4">
-    <a class="navbar-brand" href="/">Loja Alura</a>
+    <a class="navbar-brand" href="/">Materiais Disponíveis na Automação</a>
 </nav>
 {{end}}
